<resources>
    <string name="app_name" translatable="false">SinCloud</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_activity_popular_tag_string">Popular</string>
    <string name="main_activity_discovery_tag_string">Discover</string>
    <string name="main_activity_favourites_tag_string">Favourites</string>
    <string name="main_activity_stared_tag_string">Stared</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_popular">PopularActivity</string>

    <!--Facebook-->
    <string name="facebook_app_id" translatable="false">2191489807732464</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2191489807732464</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
    </string>

    <string name="audio_and_storage_rationale">SinCloud needs to access your microphone and external storage.</string>
    <string name="title_activity_user_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_sin_activity_toolbar_text">Confession room</string>
    <string name="like_image">Like image</string>
    <string name="comments_image">Comments image</string>
    <string name="title_activity_test">Test</string>
    <string name="logout">Logout</string>
    <string name="discover">Discover</string>
    <string name="trending">Trending</string>
    <string name="profile">Profile</string>
    <string name="my_sins">My sins</string>
    <string name="notifications">notifications</string>
    <string name="sins">Sins</string>
    <string name="comments">Comments</string>
    <string name="zero" translatable="false">0</string>
    <string name="nickname">Nickname:</string>
    <string name="click_to_change_username">Select a nickname!</string>
    <string name="setup_nickname_dialog_promt">Choose your nickname:</string>
    <string name="history">history</string>
    <string name="sin_name_promt">What is your sin?</string>
    <string name="anonymous">Anonymous</string>
    <string name="confession_animation_description" translatable="false">Confession_animation</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="welcome_onboarding">Welcome to SinCloud!</string>
    <string name="welcome_onboarding_desc">Have you confessed today?</string>
    <string name="onboarding_sin">Confess your sin and share it with other users anonymously! You can also use filters to alter your voice!</string>
    <string name="oboarding_discover">Discover other sins and try to help by giving advice or.. mock if you feel bad! It\'s up to you! Let\'s get stated!</string>
    <string name="oboarding_title2">Discover</string>
    <string name="onboarding_title1">Sins</string>
    <string name="singup_weak_password">Weak Password.</string>
    <string name="signup_invalid_credentials">Invalid credentials.</string>
    <string name="singup_user_already_exists">User already exists.</string>
    <string name="singup_generic_error">Something went wrong.</string>
    <string name="singup_email_empty_error">Email cannot be empty.</string>
    <string name="signup_passwords_match_error">Passwords don\'t match.</string>
    <string name="signup_password_empty_error">Passwords cannot be empty.</string>
    <string name="singup_progress_dialog_title">Signing up</string>
    <string name="singup_progress_dialog_text">Connecting with the cloud!</string>
    <string name="delete_sin_prompt_text">Are you sure you want to delete this sin?</string>
    <string name="record_sin_onboarding_record_title">Click to record.</string>
    <string name="record_sin_onboarding_record_text">Click here to start recording your sin. You have 1 minute!</string>
    <string name="record_sin_onboarding_filters_title">Apply voice filters!</string>
    <string name="record_sin_onboarding_filters_text">Change your voice before uploading by selecting a filter!</string>
    <string name="record_sin_onboarding_upload_text">When you are done, click here to upload your sin to the cloud!</string>
    <string name="record_sin_onboarding_upload_title">Upload your sin!</string>
    <string name="error_playing_audio">Error while playing audio recording</string>
    <string name="main_activity_onboarding_title">Welcome!</string>
    <string name="main_activity_onboarding_text">Click here to record a new sin!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="login_fb_failed">Facebook login failed.</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="very_bad">Very Bad</string>
    <string name="not_good">Not good</string>
    <string name="quite_ok">Quite ok</string>
    <string name="very_good">Very Good</string>
    <string name="feedback_title">Provide feedback about SinCloud</string>
    <string name="feedback_description">How did you find the overall experience?</string>
    <string name="feedback_hint">Please write your comment here …</string>
    <string name="excellent">Excellent !!!</string>
    <string name="media_photo_error_message">Something went wrong while getting picture data.</string>
    <string name="uploading_sin_title">Uploading sin</string>
    <string name="uploading_sin_message">Sending to god, please wait…</string>
    <string name="user_profile_onboarding_nickname_title">Click here to change your nickname.</string>
    <string name="user_profile_onboarding_nickname_text">This will be used as your nickname in your uploaded sins. Leave empty for \"Anonymous\".</string>
    <string name="user_profile_onboarding_profilepic_title">Press here to change your profile picture</string>
    <string name="user_profile_onboarding_profilepic_text">Choose a picture from your image gallery</string>
    <string name="applying_filter_title">Applying filter</string>
    <string name="apply_filter_text">Please wait…</string>
    <string name="new_version_title">New version available</string>
    <string name="new_version_text">Please, update app to new version to continue.</string>
    <string name="update">Update</string>
    <string name="no_thanks">No, thanks</string>
    <string name="filter_none_title">None!</string>
    <string name="filter_none_text">No filter applied!</string>
    <string name="filter_slow_title">Slow voice!</string>
    <string name="filter_slow_text">Slow down the pitch of your voice!</string>
    <string name="filter_fast_title">Fast voice!</string>
    <string name="filter_fast_text">Make your voice sound faster!</string>
    <string name="email">email</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="repeat_password">repeat password</string>
    <string name="google_login">Google login</string>
    <string name="logo">logo</string>
    <string name="lock_image">Lock image</string>
</resources>
