<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_blue_500"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/login_activity_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        app:srcCompat="@drawable/ic_drawing"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_login_constrain_layout_inner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_logo">

        <ImageView
            android:id="@+id/signup_activity_email_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_baseline_email_24px"
            android:backgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/email_signup_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/email_signup_textview"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_signup_textview"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signup_activity_email_image"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.appcompat.widget.AppCompatEditText>

        <ImageView
            android:id="@+id/signup_activity_lock_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_baseline_lock_24px"
            android:backgroundTint="@color/md_white_1000"
            app:layout_constraintBottom_toBottomOf="@+id/password_signup_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/password_signup_textview"
            android:contentDescription="@string/todo"/>

        <ImageView
            android:id="@+id/signup_activity_lock_image_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_baseline_lock_24px"
            android:backgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/password_signup_repeat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/password_signup_repeat"
            android:contentDescription="@string/todo"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_login_signup_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:elevation="1dp"
            android:text="@string/finish"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_signup_repeat"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_login_signup_button_back"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:elevation="1dp"
            android:text="@string/back"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_signup_repeat"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_signup_textview"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signup_activity_lock_image"
            app:layout_constraintTop_toBottomOf="@+id/email_signup_textview">
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_signup_repeat"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/signup_activity_lock_image"
            app:layout_constraintTop_toBottomOf="@+id/password_signup_textview">
        </androidx.appcompat.widget.AppCompatEditText>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>